# hybrid-ads

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  prime-lstar-13.dot  scripts.md
docs/: explanation.tex  test_selection.tex
examples/: lee_yannakakis_distinguishable.dot
java/: Main.java  YannakakisEQOracle.java
lib/: adaptive_distinguishing_sequence.cpp  adaptive_distinguishing_sequence.hpp  characterization_family.cpp  characterization_family.hpp  create_adaptive_distinguishing_sequence.cpp  create_adaptive_distinguishing_sequence.hpp  create_splitting_tree.cpp  create_splitting_tree.hpp  dummy.cpp  io.hpp  logging.hpp  mealy.hpp  partition.hpp  phantom.hpp  reachability.cpp  read_mealy.cpp  read_mealy.hpp  read_mealy_from_dot.cpp  read_mealy_from_dot.hpp  read_mealy_from_txt.cpp  read_mealy_from_txt.hpp  separating_family.cpp  separating_matrix.cpp  separating_matrix.hpp  seperating_family.cpp  seperating_family.hpp  seperating_matrix.cpp  seperating_matrix.hpp  splitting_tree.cpp  splitting_tree.hpp  test_suite.cpp  test_suite.hpp  transfer_sequences.cpp  transfer_sequences.hpp  trie.cpp  trie.hpp  types.hpp  windows_getopt.h  write_splitting_tree_to_dot.cpp  write_splitting_tree_to_dot.hpp  (+2 more)
small_tests/: distinguishable.dot
src/: CMakeLists.txt  conf-hyp.cpp  conf.cpp  distance.cpp  generator.cpp  learning_graph.cpp  main.cpp  methods.cpp  metrics.cpp  partition_test.cpp  phantom_test.cpp  pre_gephi_tool.cpp  reachability.cpp  stats.cpp  table.cpp  trees.cpp  trie_test.cpp
